# student-expert-flow

./: .gitignore  PRD.txt  README.md  pyproject.toml  test_config.py
configs/: expert_config.yaml  expert_config_simple.yaml  expert_config_websearch.yaml  expert_newsletter_config.yaml  student_config.yaml  student_config_simple.yaml  student_config_websearch.yaml  student_newsletter_config.yaml
student_expert_flow/: agents.py  config.py  main.py  models.py  participants.py  runner.py  transcript.py
tasks/: tasks.json
tests/: test_agents.py  test_config.py  test_runner.py  test_runner_integration.py  test_transcript.py
transcripts/: newsletter_example.md  newsletter_example_2.md
